# GeoMath

./: .gitignore  .gitpod.yml  Cargo.toml  README.md
.github/env/: .gitpod.Dockerfile
.github/workflows/: rust.yml
docs/: CNAME  crates.js  fn.main.html  help.html  search-index.js  settings.html  source-files.js  src-files.js
docs/GeoMath/: all.html
docs/clap/: all.html  index.html  macro.load_yaml.html  sidebar-items.js  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.SubCommand.html  struct.YamlLoader.html
docs/geo_math/: all.html  fn.circle_actions.html  fn.main.html  fn.make_circle.html  fn.make_rhombus.html  fn.make_sides_triangle.html  fn.make_simple_triangle.html  fn.make_square.html  fn.make_trapezoid.html  fn.rhombus_action.html  fn.square_action.html  fn.trapezoid_action.html  fn.triangle_action.html  index.html  sidebar-items.js
docs/syn/: enum.Expr.html  enum.Fields.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericParam.html  enum.ImplItem.html  enum.Item.html  enum.Lit.html  enum.Member.html  enum.Meta.html  enum.Pat.html  enum.RangeLimits.html  enum.StaticMutability.html  enum.TraitItem.html  enum.Type.html  enum.UseTree.html  enum.WherePredicate.html  struct.AngleBracketedGenericArguments.html  struct.Arm.html  struct.DeriveInput.html  struct.ExprArray.html  struct.ExprAssign.html  struct.ExprAsync.html  struct.ExprAwait.html  struct.ExprBinary.html  struct.ExprBlock.html  struct.ExprBreak.html  struct.ExprCall.html  struct.ExprCast.html  struct.ExprClosure.html  struct.ExprIf.html  (+80 more)
src/: cli.rs  cli.yml  main.rs  tui.rs
(+608 files in other folders)
