[package]
name = "geo-math"
version = "1.0.0"
authors = ["Mateus Felipe G. <contact@mateusf.com>"]
description = "Geometric Math for any shapes. project made for study the Rust Lang."
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
